Avoid tl_build in l3str-convert by simplifying the code
Also actually test an error message

--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -1000,94 +1000,52 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_convert_encode_:}
-%   The conversion from an internal string to native character tokens is
-%   very different in pdf\TeX{} and in other engines. For Unicode-aware
-%   engines, we need the definitions to be read when the null byte has
-%   category code $12$, so we set that inside a group.
-%    \begin{macrocode}
-\group_begin:
-  \char_set_catcode_other:n { 0 }
-  \bool_lazy_any:nTF
-    {
-      \sys_if_engine_luatex_p:
-      \sys_if_engine_xetex_p:
-    }
-%    \end{macrocode}
-% \begin{macro}{\@@_encode_native_loop:w}
-% \begin{macro}{\@@_encode_native_flush:}
-% \begin{macro}[rEXP]{\@@_encode_native_filter:N}
-%   In Unicode-aware engines, since building particular characters
-%   cannot be done expandably in \TeX{}, we cannot hope to get a
-%   linear-time function. However, we get quite close using the
-%   \pkg{l3tl-build} module, which abuses \tn{toks} to reach an almost
-%   linear time. We produce an arbitrary character of category code 12
-%   and add that character
-%   to the end of the token list being built. At the end of the loop,
-%   put the token list together with \cs{tl_build_end:}. Note that we
-%   use an \texttt{x}-expanding assignment because it is slightly
-%   faster. Unicode-aware engines will never incur an overflow because
-%   the internal string is guaranteed to only contain code points in
-%   $[0,\hexnum{10FFFF}]$.
-%    \begin{macrocode}
-    {
-      \cs_new_protected:Npn \@@_convert_encode_:
-        {
-          \tl_gbuild_x:Nw \g_@@_result_tl
-            \exp_after:wN \@@_encode_native_loop:w
-              \g_@@_result_tl \s__tl { \q_stop \prg_break: } \s__tl
-            \prg_break_point:
-          \tl_build_end:
-        }
-      \cs_new_protected:Npn \@@_encode_native_loop:w #1 \s__tl #2 \s__tl
-        {
-          \use_none_delimit_by_q_stop:w #2 \q_stop
-          \tl_build_add:x
-            { \char_generate:nn {#2} {12} }
-          \@@_encode_native_loop:w
-        }
-    }
-%    \end{macrocode}
 % \begin{macro}[EXP]{\@@_encode_native_char:n}
-%   Since pdf\TeX{} only supports 8-bit characters, and we have a table
-%   of all bytes, the conversion can be done in linear time within an
-%   \texttt{x}-expanding assignment. Look out for character codes larger
-%   than $255$, those characters are replaced by |?|, and raise a flag,
-%   which then triggers a pdf\TeX{}-specific error.
+%   The conversion from an internal string to native character tokens
+%   basically maps \cs{char_generate:nn} through the code-points, but in
+%   non-Unicode-aware engines we use a fall-back character |?| rather
+%   than nothing when given a character code outside $[0,255]$.  We
+%   detect the presence of bad characters using a flag and only produce
+%   a single error after the \texttt{x}-expanding assignment.
 %    \begin{macrocode}
-    {
-      \cs_new_protected:Npn \@@_convert_encode_:
-        {
-          \flag_clear:n { str_error }
-          \@@_convert_gmap_internal:N \@@_encode_native_char:n
-          \@@_if_flag_error:nnx { str_error }
-            { pdfTeX-native-overflow } { }
-        }
-      \cs_new:Npn \@@_encode_native_char:n #1
-        {
-          \if_int_compare:w #1 > \c_@@_max_byte_int
-            \flag_raise:n { str_error }
-            ?
-          \else:
-            \@@_output_byte:n {#1}
-          \fi:
-        }
-      \__kernel_msg_new:nnnn { str } { pdfTeX-native-overflow }
-        { Character~code~too~large~for~pdfTeX. }
-        {
-          The~pdfTeX~engine~only~supports~8-bit~characters:~
-          valid~character~codes~are~in~the~range~[0,255].~
-          To~manipulate~arbitrary~Unicode,~use~LuaTeX~or~XeTeX.
-        }
-    }
+\bool_lazy_any:nTF
+  {
+    \sys_if_engine_luatex_p:
+    \sys_if_engine_xetex_p:
+  }
+  {
+    \cs_new_protected:Npn \@@_convert_encode_:
+      { \@@_convert_gmap_internal:N \@@_encode_native_char:n }
+    \cs_new:Npn \@@_encode_native_char:n #1
+      { \char_generate:nn {#1} {12} }
+  }
+  {
+    \cs_new_protected:Npn \@@_convert_encode_:
+      {
+        \flag_clear:n { str_error }
+        \@@_convert_gmap_internal:N \@@_encode_native_char:n
+        \@@_if_flag_error:nnx { str_error }
+          { native-overflow } { }
+      }
+    \cs_new:Npn \@@_encode_native_char:n #1
+      {
+        \if_int_compare:w #1 > \c_@@_max_byte_int
+          \flag_raise:n { str_error }
+          ?
+        \else:
+          \char_generate:nn {#1} {12}
+        \fi:
+      }
+    \__kernel_msg_new:nnnn { str } { native-overflow }
+      { Character~code~too~large~for~this~engine. }
+      {
+        This~engine~only~support~8-bit~characters:~
+        valid~character~codes~are~in~the~range~[0,255].~
+        To~manipulate~arbitrary~Unicode,~use~LuaTeX~or~XeTeX.
+      }
+  }
 %    \end{macrocode}
 % \end{macro}
-% \end{macro}
-% \end{macro}
-% \end{macro}
-%   End the group to restore the catcode of the null byte.
-%    \begin{macrocode}
-\group_end:
-%    \end{macrocode}
 % \end{macro}
 %
 % \subsubsection{\texttt{clist}}
