Move \c__max_constdef_int to  @@ namespace

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1172,7 +1172,7 @@
 %
 % \begin{macro}{\int_const:Nn, \int_const:cn}
 % \begin{macro}{\@@_constdef:Nw}
-% \begin{variable}{\c__max_constdef_int}
+% \begin{variable}{\c_@@_max_constdef_int}
 % \UnitTested
 %   As stated, most constants can be defined as \tn{chardef} or
 %   \tn{mathchardef} but that's engine dependent. As a result, there is some
@@ -1193,7 +1193,7 @@
         \tex_global:D
       }
       {
-        \int_compare:nNnTF {#2} > \c__max_constdef_int
+        \int_compare:nNnTF {#2} > \c_@@_max_constdef_int
           {
             \int_new:N #1
             \tex_global:D
@@ -1214,10 +1214,10 @@
     \cs_if_exist:NTF \uptex_disablecjktoken:D
       { \cs_new_eq:NN \@@_constdef:Nw \uptex_kchardef:D }
       { \cs_new_eq:NN \@@_constdef:Nw \tex_chardef:D }
-    \@@_constdef:Nw \c__max_constdef_int 1114111 ~
+    \@@_constdef:Nw \c_@@_max_constdef_int 1114111 ~
 \else:
   \cs_new_eq:NN \@@_constdef:Nw \tex_mathchardef:D
-  \tex_mathchardef:D \c__max_constdef_int 32767 ~
+  \tex_mathchardef:D \c_@@_max_constdef_int 32767 ~
 \fi:
 %    \end{macrocode}
 % \end{variable}
