Document the dates at which intarray and scan marks were added

--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -64,7 +64,7 @@
 % The use of \texttt{intarray} data is therefore recommended for cases where
 % the need for fast access is of paramount importance.
 %
-% \begin{function}{\intarray_new:Nn}
+% \begin{function}[added = 2018-03-29]{\intarray_new:Nn}
 %   \begin{syntax}
 %     \cs{intarray_new:Nn} \meta{intarray~var} \Arg{size}
 %   \end{syntax}
@@ -72,7 +72,7 @@
 %   \meta{integer array variable} with that number of (zero) entries.
 % \end{function}
 %
-% \begin{function}[EXP]{\intarray_count:N}
+% \begin{function}[EXP, added = 2018-03-29]{\intarray_count:N}
 %   \begin{syntax}
 %     \cs{intarray_count:N} \meta{intarray~var}
 %   \end{syntax}
@@ -80,7 +80,7 @@
 %   Contrarily to \cs{seq_count:N} this is performed in constant time.
 % \end{function}
 %
-% \begin{function}{\intarray_gset:Nnn}
+% \begin{function}[added = 2018-03-29]{\intarray_gset:Nnn}
 %   \begin{syntax}
 %     \cs{intarray_gset:Nnn} \meta{intarray~var} \Arg{position} \Arg{value}
 %   \end{syntax}
@@ -92,7 +92,7 @@
 %   global.
 % \end{function}
 %
-% \begin{function}[EXP]{\intarray_item:Nn}
+% \begin{function}[EXP, added = 2018-03-29]{\intarray_item:Nn}
 %   \begin{syntax}
 %     \cs{intarray_item:Nn} \meta{intarray~var} \Arg{position}
 %   \end{syntax}
