Check local/global scope of variables in l3intarray and tl_build

--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -155,7 +155,10 @@
 %   It seems \LuaTeX{}'s |cmr10| has an extra \tn{fontdimen} parameter
 %   number $8$ compared to other engines (for a math font we would
 %   replace $8$ by $22$ or some such).
+%   Every \texttt{intarray} must be global; it's enough to run this
+%   check in \cs{intarray_new:Nn}.
 %    \begin{macrocode}
+\__kernel_patch:nnNNpn { \__kernel_chk_var_scope:NN g #1 } { }
 \cs_new_protected:Npn \intarray_new:Nn #1#2
   {
     \__kernel_chk_if_free_cs:N #1
