--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -4159,10 +4159,12 @@
 %   definition does not seem useful so we just do |#3| |#1| |{}| to
 %   clear it locally or globally as appropriate.
 %    \begin{macrocode}
-\cs_new_protected:Npn \tl_build_begin:N
-  { \@@_build_begin:NN \cs_set_nopar:Npx }
-\cs_new_protected:Npn \tl_build_gbegin:N
-  { \@@_build_begin:NN \cs_gset_nopar:Npx }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
+\cs_new_protected:Npn \tl_build_begin:N #1
+  { \@@_build_begin:NN \cs_set_nopar:Npx #1 }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \tl_build_gbegin:N #1
+  { \@@_build_begin:NN \cs_gset_nopar:Npx #1 }
 \cs_new_protected:Npn \@@_build_begin:NN #1#2
   { \exp_args:Nc \@@_build_begin:NNN { \cs_to_str:N #2 ' } #2 #1 }
 \cs_new_protected:Npn \@@_build_begin:NNN #1#2#3
@@ -4202,21 +4204,25 @@
 %   implies that the assignment does not simply set the token list to an
 %   |x|-expansion of the second argument.
 %    \begin{macrocode}
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \tl_build_put_right:Nn #1#2
   {
     \cs_set_nopar:Npx #1
       { \exp_after:wN \exp_not:n \exp_after:wN { \exp:w #1 #2 } }
   }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \tl_build_put_right:Nx #1#2
   {
     \cs_set_nopar:Npx #1
       { \exp_after:wN \exp_not:n \exp_after:wN { \exp:w #1 } #2 }
   }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \tl_build_gput_right:Nn #1#2
   {
     \cs_gset_nopar:Npx #1
       { \exp_after:wN \exp_not:n \exp_after:wN { \exp:w #1 #2 } }
   }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \tl_build_gput_right:Nx #1#2
   {
     \cs_gset_nopar:Npx #1
@@ -4256,11 +4262,13 @@
 %   add the \meta{right} material after the \Arg{left} in the
 %   |x|-expanding assignment.
 %    \begin{macrocode}
-\cs_new_protected:Npn \tl_build_put_left:Nn
-  { \@@_build_put_left:NNn \cs_set_nopar:Npx }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
+\cs_new_protected:Npn \tl_build_put_left:Nn #1
+  { \@@_build_put_left:NNn \cs_set_nopar:Npx #1 }
 \cs_generate_variant:Nn \tl_build_put_left:Nn { Nx }
-\cs_new_protected:Npn \tl_build_gput_left:Nn
-  { \@@_build_put_left:NNn \cs_gset_nopar:Npx }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \tl_build_gput_left:Nn #1
+  { \@@_build_put_left:NNn \cs_gset_nopar:Npx #1 }
 \cs_generate_variant:Nn \tl_build_gput_left:Nn { Nx }
 \cs_new_protected:Npn \@@_build_put_left:NNn #1#2#3
   {
@@ -4304,11 +4312,12 @@
 % \begin{macro}{\tl_build_end:N, \tl_build_gend:N, \@@_build_end_loop:NN}
 %   Get the data then clear the \meta{next~tl} recursively until finding
 %   an empty one.  It is perhaps wasteful to repeatedly use
-%   \cs{cs_to_sr:N}.
+%   \cs{cs_to_sr:N}.  The local/global scope is checked by
+%   \cs{tl_set:Nx} or \cs{tl_gset:Nx}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_build_end:N #1
   {
-    \tl_build_get:NN #1 #1
+    \@@_build_get:NNN \tl_set:Nx #1 #1
     \exp_args:Nc \@@_build_end_loop:NN { \cs_to_str:N #1 ' } \tl_clear:N
   }
 \cs_new_protected:Npn \tl_build_gend:N #1
