Add nnff... variants to \__kernel_msg_expandable_error

--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -267,7 +267,7 @@
   }
 \cs_new:Npn \@@_item:Nw #1#2 ;
   {
-    \@@_bounds:NNnTF \__kernel_msg_expandable_error:nnnnn #1 {#2}
+    \@@_bounds:NNnTF \__kernel_msg_expandable_error:nnfff #1 {#2}
       { \__kernel_intarray_item:Nn #1 {#2} }
       { 0 }
   }
