--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -656,7 +656,11 @@
 %     \__kernel_msg_expandable_error:nnnnn,
 %     \__kernel_msg_expandable_error:nnnn,
 %     \__kernel_msg_expandable_error:nnn,
-%     \__kernel_msg_expandable_error:nn
+%     \__kernel_msg_expandable_error:nn,
+%     \__kernel_msg_expandable_error:nnffff,
+%     \__kernel_msg_expandable_error:nnfff,
+%     \__kernel_msg_expandable_error:nnff,
+%     \__kernel_msg_expandable_error:nnf,
 %   }
 %   \begin{syntax}
 %     \cs{__kernel_msg_expandable_error:nnnnnn} \Arg{module} \Arg{message} \Arg{arg one} \Arg{arg two} \Arg{arg three} \Arg{arg four}
@@ -2108,7 +2112,11 @@
 %     \__kernel_msg_expandable_error:nnnnn,
 %     \__kernel_msg_expandable_error:nnnn,
 %     \__kernel_msg_expandable_error:nnn,
-%     \__kernel_msg_expandable_error:nn
+%     \__kernel_msg_expandable_error:nn,
+%     \__kernel_msg_expandable_error:nnffff,
+%     \__kernel_msg_expandable_error:nnfff,
+%     \__kernel_msg_expandable_error:nnff,
+%     \__kernel_msg_expandable_error:nnf,
 %   }
 %   The command built from the csname
 %   \cs{c_@@_text_prefix_tl} |LaTeX / #1 / #2|
@@ -2144,6 +2152,10 @@
     \__kernel_msg_expandable_error:nnnnnn
       {#1} {#2} { } { } { } { }
   }
+\cs_generate_variant:Nn \__kernel_msg_expandable_error:nnnnnn { nnffff }
+\cs_generate_variant:Nn \__kernel_msg_expandable_error:nnnnn { nnfff }
+\cs_generate_variant:Nn \__kernel_msg_expandable_error:nnnn { nnff }
+\cs_generate_variant:Nn \__kernel_msg_expandable_error:nnn { nnf }
 %    \end{macrocode}
 % \end{macro}
 %
