--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -699,8 +699,9 @@
             \s_@@ { \exp_not:n {#1} }
           }
           {
-            \exp_args:Nnno \__kernel_msg_expandable_error:nnn
-              { kernel } { prop-keyval } {#4}
+            \__kernel_msg_expandable_error:nnf
+              { kernel } { prop-keyval }
+              { \exp_after:wN \exp_stop_f: #4 }
           }
       }
   }
