--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1457,11 +1457,10 @@
   }
 \cs_new:Npn \str_item_ignore_spaces:nn #1
   { \exp_args:No \@@_item:nn { \tl_to_str:n {#1} } }
-\__kernel_patch_args:nNNpn { {#1} { \int_eval:n {#2} } }
 \cs_new:Npn \@@_item:nn #1#2
   {
     \exp_after:wN \@@_item:w
-    \int_value:w \int_eval:w #2 \exp_after:wN ;
+    \int_value:w \int_eval:n {#2} \exp_after:wN ;
     \int_value:w \@@_count:n {#1} ;
     #1 \q_stop
   }
@@ -1554,13 +1553,11 @@
   }
 \cs_new:Npn \str_range_ignore_spaces:nnn #1
   { \exp_args:No \@@_range:nnn { \tl_to_str:n {#1} } }
-\__kernel_patch_args:nNNpn
-  { {#1} { \int_eval:n {#2} } { \int_eval:n {#3} } }
 \cs_new:Npn \@@_range:nnn #1#2#3
   {
     \exp_after:wN \@@_range:w
     \int_value:w \@@_count:n {#1} \exp_after:wN ;
-    \int_value:w \int_eval:n { #2 - 1 } \exp_after:wN ;
+    \int_value:w \int_eval:n { (#2) - 1 } \exp_after:wN ;
     \int_value:w \int_eval:n {#3} ;
     #1 \q_stop
   }
