Make deprecation code kernel-reserved

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2399,7 +2399,7 @@
 \tl_gset:Nn \g_file_current_name_tl { \g_file_curr_name_str }
 \__kernel_deprecation_code:nn
   {
-    \__deprecation_error:Nnn \g_file_current_name_tl
+    \__kernel_deprecation_error:Nnn \g_file_current_name_tl
       { \g_file_curr_name_str } { 2018-12-31 }
   }
   { \tex_def:D \g_file_current_name_tl { \g_file_curr_name_str } }
