--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -2548,12 +2548,12 @@
 %   \cs{c_minus_one} (as all deprecated commands) is made outer by
 %   \cs{debug_deprecation_on:}.
 %    \begin{macrocode}
-%<package>\cs_gset_eq:NN \c__deprecation_minus_one \m@ne
-%<initex>\int_const:Nn \c__deprecation_minus_one { -1 }
-\cs_new_eq:NN \c_minus_one \c__deprecation_minus_one
+%<package>\cs_gset_eq:NN \c_@@_minus_one \m@ne
+%<initex>\int_const:Nn \c_@@_minus_one { -1 }
+\cs_new_eq:NN \c_minus_one \c_@@_minus_one
 \__kernel_deprecation_code:nn
-  { \__deprecation_error:Nnn \c_minus_one { -1 } { 2018-12-31 } }
-  { \tex_let:D \c_minus_one \c__deprecation_minus_one }
+  { \__kernel_deprecation_error:Nnn \c_minus_one { -1 } { 2018-12-31 } }
+  { \tex_let:D \c_minus_one \c_@@_minus_one }
 %    \end{macrocode}
 % \end{variable}
 %
