Avoid some internal copies of \dimexpr by using public dim functions
And to allow \dim_to_decimal_in_sp:n to be used in l3fp, make it faster.

--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -840,7 +840,7 @@
 %   registers, the decimal rounding provided by \TeX{} does not
 %   accurately represent the binary value that it manipulates, so we
 %   extract this binary value as a number of scaled points with
-%   \cs{int_value:w} \cs{@@_dim_eval:w} \meta{decimal value} |pt|, and
+%   \cs{int_value:w} \cs{dim_to_decimal_in_sp:n} |{| \meta{decimal value} |pt| |}|, and
 %   use an auxiliary of \cs{dim_to_fp:n}, which performs the
 %   multiplication by $2^{-16}$, correctly rounded.
 %    \begin{macrocode}
@@ -885,7 +885,7 @@
   {
     \exp_after:wN \@@_from_dim_test:ww
     \int_value:w #2 \exp_after:wN ,
-    \int_value:w \@@_dim_eval:w #1 pt ;
+    \int_value:w \dim_to_decimal_in_sp:n { #1 pt } ;
   }
 %    \end{macrocode}
 %   The \tn{wd}, \tn{dp}, \tn{ht} primitives expect an integer argument.
@@ -905,8 +905,7 @@
   {
     \exp_after:wN \@@_from_dim_test:ww
     \exp_after:wN 0 \exp_after:wN ,
-    \int_value:w \@@_dim_eval:w
-      \exp_after:wN \use:n \exp_after:wN { \tex_the:D #1 #2 } ;
+    \int_value:w \dim_to_decimal_in_sp:n { #1 #2 } ;
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2032,7 +2031,7 @@
       {
         \exp_after:wN \@@_from_dim_test:ww
         \exp_after:wN 0 \exp_after:wN ,
-        \int_value:w \@@_dim_eval:w 1 #1 \exp_after:wN ;
+        \int_value:w \dim_to_decimal_in_sp:n { 1 #1 } \exp_after:wN ;
         \exp:w \exp_end_continue_f:w \@@_parse_infix:NN
       }
   }
