--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1689,7 +1689,7 @@
 \__kernel_patch_args:nNNpn
   { { \__kernel_chk_expr:nNnN {#1} \@@_eval:w { } \dim_to_decimal_in_sp:n } }
 \cs_new:Npn \dim_to_decimal_in_sp:n #1
-  { \int_eval:n { \@@_eval:w #1 \@@_eval_end: } }
+  { \int_value:w \@@_eval:w #1 \@@_eval_end: }
 %    \end{macrocode}
 % \end{macro}
 %
