Remove \__int_eval:w from list of cases documented for \int_value:w.

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -873,9 +873,7 @@
 %   \begin{itemize}
 %     \item an integer variable (in fact, any \TeX{} register except
 %       \tn{toks}) or
-%     \item \cs{__int_eval:w} \meta{intexpr} \cs{__int_eval_end:} (or
-%       another \eTeX{} expression) or
-%     \item explicit digits (or by |'|\meta{octal digits} or |"|\meta{hexadecimal digits} or |`|\meta{character}
+%     \item explicit digits (or by |'|\meta{octal digits} or |"|\meta{hexadecimal digits} or |`|\meta{character}).
 %   \end{itemize}
 %   In this last case expansion stops once a non-digit is found; if that is a
 %   space it is removed as in \texttt{f}-expansion, and so \cs{exp_stop_f:}
