--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -335,6 +335,16 @@
 %   \end{texnote}
 % \end{function}
 %
+% \section{Additions to \pkg{l3flag}}
+%
+% \begin{function}[EXP]{\flag_raise_if_clear:n}
+%   \begin{syntax}
+%     \cs{flag_raise_if_clear:n} \Arg{flag name}
+%   \end{syntax}
+%   Ensures the \meta{flag} is raised by making its height at least~$1$,
+%   locally.
+% \end{function}
+%
 % \section{Additions to \pkg{l3int}}
 %
 % \begin{function}[EXP, added = 2016-12-06]{\int_rand:nn}
@@ -1924,6 +1934,29 @@
 %   A simple rename.
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_input_stop: { \tex_endinput:D }
+%    \end{macrocode}
+% \end{macro}
+%
+% \subsection{Additions to \pkg{l3flag}}
+%
+%    \begin{macrocode}
+%<@@=flag>
+%    \end{macrocode}
+%
+% \begin{macro}[EXP]{\flag_raise_if_clear:n}
+%   It might be faster to just call the \enquote{trap} function in all
+%   cases but conceptually the function name suggests we should only run
+%   it if the flag is zero in case the \enquote{trap} made customizable
+%   in the future.
+%    \begin{macrocode}
+\__kernel_patch:nnNNpn { \@@_chk_exist:n {#1} } { }
+\cs_new:Npn \flag_raise_if_clear:n #1
+  {
+    \if_cs_exist:w flag~#1~0 \cs_end:
+    \else:
+      \cs:w flag~#1 \cs_end: 0 ;
+    \fi:
+  }
 %    \end{macrocode}
 % \end{macro}
 %
