--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1091,6 +1091,16 @@
 %   and global \meta{tl~var} respectively.
 % \end{function}
 %
+% \begin{function}[added = 2018-04-01]{\tl_build_clear:N, \tl_build_gclear:N}
+%   \begin{syntax}
+%     \cs{tl_build_clear:N} \meta{tl~var}
+%   \end{syntax}
+%   Clears the \meta{tl~var} and sets it up to support other
+%   \cs[no-index]{tl_build_\ldots{}} functions.  The |clear| and
+%   |gclear| functions must be used for local and global \meta{tl~var}
+%   respectively.
+% \end{function}
+%
 % \begin{function}[added = 2018-04-01]
 %   {
 %     \tl_build_put_left:Nn, \tl_build_put_left:Nx,
@@ -4197,6 +4207,19 @@
   }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\tl_build_clear:N, \tl_build_gclear:N}
+%   The |begin| and |gbegin| functions already clear enough to make the
+%   token list variable effectively empty.  Eventually the |begin| and
+%   |gbegin| functions should check that |#1'| is empty or undefined,
+%   while the |clear| and |gclear| functions ought to empty |#1'|,
+%   |#1''| and so on, similar to \cs{tl_build_end:N}.  This only affects
+%   memory usage.
+%    \begin{macrocode}
+\cs_new_eq:NN \tl_build_clear:N \tl_build_begin:N
+\cs_new_eq:NN \tl_build_gclear:N \tl_build_gbegin:N
+%    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}
